# tui-mongoc

./: .gitignore  CMakeLists.txt  Makefile  build-mingw.ps1  build.sh
src/: input.c  input.h  json_display.c  json_display.h  main.c  mongo_ops.c  mongo_ops.h  screens.c  screens.h  tui.c  tui.h  utils.c  utils.h
